--- a/content/resources/11-333s16-th.md
+++ b/content/resources/11-333s16-th.md
@@ -10,8 +10,8 @@ file_type: image/jpeg
 image_metadata:
   caption: Pictured here is an informal settlement in Medellin, Colombia. This course
     will take a close examination of informal settlements, which are the most common
-    form of globalization in the world. (Image courtesy of [Julio Davila](https://flic.kr/p/c4d8gA)
-    on flickr. License CC BY-NC-SA).
+    form of globalization in the world. (Image courtesy of {{% resource_link "39fb0beb-d669-4558-ab9b-1cfab7ec40bd"
+    "Julio Davila" %}} on flickr. License CC BY-NC-SA).
   credit: Image courtesy of Julio Davila on flickr. License CC BY-NC-SA.
   image-alt: Photo of an informal settlement in Medellin, Colombia with a public library
     in the background and aerial cable cars above.
